Fix horizontal overflow

--- a/src/components/sass/layouts/_layout.scss
+++ b/src/components/sass/layouts/_layout.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 main {
@@ -28,6 +29,7 @@ main {
 }
 
 @media screen and (max-width: $tablet) {
+
     main {
         width: 100vw;
         max-width: 100vw;
